2013-02-17  Moritz Bunkus  <moritz@bunkus.org>

        * mkvinfo, mkvpropedit, mmg's header editor: bug fix: Fixed the
        description for the DisplayUnit element to include value 3
        ("aspect ratio").

2013-02-16  Moritz Bunkus  <moritz@bunkus.org>

        * documentation: Added a Dutch translation of mmg's guide by
        René Maassen (see AUTHORS).

        * mkvmerge: bug fix: Fixed handling chapters when splitting by
        parts (both parts/timecodes and parts/frames). Fixes #831.

        * mkvmerge: bug fix: Fixed reading certain MP4 atoms with invalid
        length fields.

2013-02-06  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix in common AAC code: Fixed wrong calculation of
        AAC packet size for malformed packets resulting in "safemalloc()"
        failing to allocate memory. Part of a fix for #832.

2013-02-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented support for reading MPLS
        BluRay playlist files. All M2TS files referenced from an MPLS file
        are processed. Chapter entries from that MPLS file are used as
        well. Implements #765.

2013-01-26  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Selecting one of the pre-defined values from the
        "split by X" argument drop down box (e.g. "700M") was not leaving
        the selected entry in the drop down box but set it to empty
        instead.

2013-01-21  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed reading VP6 video from FlashVideo
        files. Fixes #836.

2013-01-20  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed validating the argument for splitting parts
        by frame/field numbers. Fixes #835.

        * Released v6.0.0.

2013-01-14  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented splitting by parts based on
        frame/field numbers ("--split parts-frames:" in
        mkvmerge). Implements #819.
